Add seminar notes for Seminars 5, 6, and 7
- Seminar 5: Introduced Markov chains with transition matrices and stationary distributions. Included detailed solutions for two problems with specific transition probabilities.
- Seminar 6: Discussed continuous-time Markov chains, including the derivation of probabilities over time and the use of Laplace transforms.
- Seminar 7: Explored more complex Markov chain scenarios, including transition rates and stationary distributions, with comprehensive examples and solutions.

--- a/seminars.tex
+++ b/seminars.tex
@@ -1,1370 +1,15 @@
 \section{Семинары}
 
-\subsection{Семинар 1}
-
-\subsection{Семинар 2}
-
-\subsubsection*{Задача с книгами}
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e1/.style   = {->, shorten >=2pt, shorten <=2pt},
-		e2/.style   = {->, shorten >=2pt, shorten <=2pt},
-		e3/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вероятности ---
-	\newcommand{\p}[1]{p_{#1}}
-	\renewcommand{\p}[1]{\ifcase#1\relax \or \frac{1}{2}\or \frac{1}{3}\or \frac{1}{6}\fi}
-
-	% --- вершины ---
-	\node[state] (Q1) at (90:3)   {$123$};
-	\node[state] (Q2) at (30:3)   {$132$};
-	\node[state] (Q3) at (-30:3)  {$213$};
-	\node[state] (Q4) at (-90:3)  {$231$};
-	\node[state] (Q5) at (-150:3) {$312$};
-	\node[state] (Q6) at (150:3)  {$321$};
-
-	% --- рёбра ---
-	% Q1 = 123
-	\path[e1, bend left=12] (Q1) edge node[lbl] {$\p{1}$} (Q4);
-	\path[e2, bend left=12] (Q1) edge node[lbl] {$\p{2}$} (Q2);
-	\path[e3, loop above]   (Q1) edge node[lbl] {$\p{3}$} (Q1);
-
-	% Q2 = 132
-	\path[e1, bend left=12] (Q2) edge node[lbl] {$\p{1}$} (Q6);
-	\path[e2, loop right]   (Q2) edge node[lbl] {$\p{2}$} (Q2);
-	\path[e3, bend left=12] (Q2) edge node[lbl] {$\p{3}$} (Q1);
-
-	% Q3 = 213
-	\path[e1, bend left=12] (Q3) edge node[lbl] {$\p{1}$} (Q4);
-	\path[e2, bend left=12] (Q3) edge node[lbl] {$\p{2}$} (Q2);
-	\path[e3, loop right]   (Q3) edge node[lbl] {$\p{3}$} (Q3);
-
-	% Q4 = 231
-	\path[e1, loop below]   (Q4) edge node[lbl] {$\p{1}$} (Q4);
-	\path[e2, bend left=12] (Q4) edge node[lbl] {$\p{2}$} (Q5);
-	\path[e3, bend left=12] (Q4) edge node[lbl] {$\p{3}$} (Q3);
-
-	% Q5 = 312
-	\path[e1, bend left=12] (Q5) edge node[lbl] {$\p{1}$} (Q6);
-	\path[e2, loop left]    (Q5) edge node[lbl] {$\p{2}$} (Q5);
-	\path[e3, bend left=12] (Q5) edge node[lbl] {$\p{3}$} (Q1);
-
-	% Q6 = 321
-	\path[e1, loop left]    (Q6) edge node[lbl] {$\p{1}$} (Q6);
-	\path[e2, bend left=12] (Q6) edge node[lbl] {$\p{2}$} (Q5);
-	\path[e3, bend left=12] (Q6) edge node[lbl] {$\p{3}$} (Q2);
-
-\end{tikzpicture}
-
-\[
-	P =
-	\begin{array}{c|cccccc}
-		    & Q_1          & Q_2          & Q_3          & Q_4          & Q_5          & Q_6          \\
-		\hline
-		Q_1 & \tfrac{1}{6} & \tfrac{1}{3} & 0            & \tfrac{1}{2} & 0            & 0            \\
-		Q_2 & \tfrac{1}{6} & \tfrac{1}{3} & 0            & 0            & 0            & \tfrac{1}{2} \\
-		Q_3 & 0            & \tfrac{1}{3} & \tfrac{1}{6} & \tfrac{1}{2} & 0            & 0            \\
-		Q_4 & 0            & 0            & \tfrac{1}{6} & \tfrac{1}{2} & \tfrac{1}{3} & 0            \\
-		Q_5 & \tfrac{1}{6} & 0            & 0            & 0            & \tfrac{1}{3} & \tfrac{1}{2} \\
-		Q_6 & 0            & \tfrac{1}{6} & 0            & 0            & \tfrac{1}{3} & \tfrac{1}{2}
-	\end{array}
-\]
-
-
-Стационарное распределение $\overline r=(r_1,r_2,r_3,r_4,r_5,r_6)$
-задаётся условиями
-\[
-	\overline r P = \overline r,
-	\qquad \sum_{i=1}^6 r_i = 1,
-	\qquad r_i \ge 0.
-\]
-
-Из матрицы $P$ получаем систему:
-\[
-	\begin{array}{rcl}
-		\begin{aligned}
-			r_1 & = \tfrac{1}{6}r_1 + \tfrac{1}{6}r_2 + \tfrac{1}{6}r_5,                   \\
-			r_2 & = \tfrac{1}{3}r_1 + \tfrac{1}{3}r_2 + \tfrac{1}{3}r_3 + \tfrac{1}{6}r_6, \\
-			r_3 & = \tfrac{1}{6}r_3 + \tfrac{1}{6}r_4,                                     \\
-			r_4 & = \tfrac{1}{2}r_1 + \tfrac{1}{2}r_3 + \tfrac{1}{2}r_4,                   \\
-			r_5 & = \tfrac{1}{3}r_4 + \tfrac{1}{3}r_5 + \tfrac{1}{3}r_6,                   \\
-			r_6 & = \tfrac{1}{2}r_2 + \tfrac{1}{2}r_5 + \tfrac{1}{2}r_6,
-		\end{aligned}
-		 & \qquad \Rightarrow \qquad &
-		\begin{aligned}
-			6r_1 & = r_1 + r_2 + r_5,          \\
-			6r_2 & = 2r_1 + 2r_2 + 2r_3 + r_6, \\
-			6r_3 & = r_3 + r_4,                \\
-			2r_4 & = r_1 + r_3 + r_4,          \\
-			3r_5 & = r_4 + r_5 + r_6,          \\
-			2r_6 & = r_2 + r_5 + r_6.
-		\end{aligned}
-	\end{array}
-\]
-
-\[
-	\begin{array}{rcl}
-		\begin{aligned}
-			5r_1 - r_2 - r_5          & = 0, \\
-			-2r_1 + 4r_2 - 2r_3 - r_6 & = 0, \\
-			5r_3 - r_4                & = 0, \\
-			-\,r_1 - r_3 + r_4        & = 0, \\
-			-\,r_4 + 2r_5 - r_6       & = 0, \\
-			r_1+r_2+r_3+r_4+r_5+r_6   & =1,
-		\end{aligned}
-		 & \qquad \Rightarrow \qquad &
-		\underbrace{\!
-			\begin{pmatrix}
-				5  & -1 & 0  & 0  & -1 & 0  \\
-				-2 & 4  & -2 & 0  & 0  & -1 \\
-				0  & 0  & 5  & -1 & 0  & 0  \\
-				-1 & 0  & -1 & 1  & 0  & 0  \\
-				0  & 0  & 0  & -1 & 2  & -1 \\
-				1  & 1  & 1  & 1  & 1  & 1
-			\end{pmatrix}}_{\displaystyle A}
-		\underbrace{\!
-			\begin{pmatrix}r_1\\r_2\\r_3\\r_4\\r_5\\r_6\end{pmatrix}}_{\displaystyle x}
-		=
-		\underbrace{\!
-			\begin{pmatrix}0\\0\\0\\0\\0\\1\end{pmatrix}}_{\displaystyle b}.
-	\end{array}
-\]
-
-\[
-	\left[
-		\begin{array}{rrrrrr|r}
-			5  & -1 & 0  & 0  & -1 & 0  & 0 \\
-			-2 & 4  & -2 & 0  & 0  & -1 & 0 \\
-			0  & 0  & 5  & -1 & 0  & 0  & 0 \\
-			-1 & 0  & -1 & 1  & 0  & 0  & 0 \\
-			0  & 0  & 0  & -1 & 2  & -1 & 0 \\
-			1  & 1  & 1  & 1  & 1  & 1  & 1
-		\end{array}
-		\right]
-	\overset{}{\longrightarrow}
-	\left[
-		\begin{array}{rrrrrr|r}
-			1 & 0 & 0 & 0 & 0 & 0 & \tfrac{2}{25} \\
-			0 & 1 & 0 & 0 & 0 & 0 & \tfrac{3}{20} \\
-			0 & 0 & 1 & 0 & 0 & 0 & \tfrac{1}{50} \\
-			0 & 0 & 0 & 1 & 0 & 0 & \tfrac{1}{10} \\
-			0 & 0 & 0 & 0 & 1 & 0 & \tfrac{1}{4}  \\
-			0 & 0 & 0 & 0 & 0 & 1 & \tfrac{2}{5}
-		\end{array}
-		\right]
-\]
-
-\[
-	\overline r =
-	\left(\tfrac{2}{25},\;\tfrac{3}{20},\;\tfrac{1}{50},\;\tfrac{1}{10},\;\tfrac{1}{4},\;\tfrac{2}{5}\right).
-\]
-
-
-\subsection{Семинар 3}
-
-\subsubsection*{Задача 3.1}
-
-\subsubsection*{Задача 3.2}
-
-\subsubsection*{Задача 3.3.1}
-
-Условие: $p+q=1$, $p,q>0$.
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q1) at (0,0) {$1$};
-	\node[state] (Q2) at (2.5,0) {$2$};
-	\node[state] (Q3) at (5,0) {$3$};
-
-	% --- рёбра ---
-	% Q1
-	\path[e, loop above]   (Q1) edge node[lbl] {$1$} (Q1);
-
-	% Q2
-	\path[e, bend left=12] (Q2) edge node[lbl] {$q$} (Q1);
-	\path[e, bend left=12] (Q2) edge node[lbl] {$p$} (Q3);
-
-	% Q3
-	\path[e, loop above]   (Q3) edge node[lbl] {$1$} (Q3);
-
-\end{tikzpicture}
-
-Найти: $P$, $P^n$, $\overline{r}$ (стационарное распределение), $\lambda_1=1$, $\lambda_2$, $\lambda_3$ (собственные числа).
-
-\paragraph{Решение.}
-
-\[
-	P =
-	\begin{array}{c|ccc}
-		    & Q_1 & Q_2 & Q_3 \\ \hline
-		Q_1 & 1   & 0   & 0   \\
-		Q_2 & q   & 0   & p   \\
-		Q_3 & 0   & 0   & 1
-	\end{array}
-\]
-
-\[
-	P^0=I,\qquad P^2=P \;\Rightarrow\; P^n=P\ (n\ge1).
-\]
-
-Стационарное распределение $\overline r=(r_1,r_2,r_3)$ задаётся условиями
-\[
-	\overline r P = \overline r,\quad r_1+r_2+r_3=1,\quad r_i\ge0.
-\]
-Из $rP=\bigl(\,r\cdot\text{col}_1,\ r\cdot\text{col}_2,\ r\cdot\text{col}_3\,\bigr)$ и столбцов $P$ получаем систему
-\[
-	\begin{aligned}
-		r_1 & = r_1 + q r_2, \\
-		r_2 & = 0,           \\
-		r_3 & = p r_2 + r_3,
-	\end{aligned}
-	\qquad\Rightarrow\qquad
-	r_2=0,\ \ r_1+r_3=1.
-\]
-Отсюда
-\[
-	\overline r=(\alpha,\,0,\,1-\alpha),\quad \alpha\in[0,1].
-\]
-
-Собственные числа: вычислим характеристический многочлен
-\[
-	\det(P-\lambda I)=\det
-	\begin{pmatrix}
-		1-\lambda & 0        & 0         \\
-		q         & -\lambda & p         \\
-		0         & 0        & 1-\lambda
-	\end{pmatrix}
-	=(1-\lambda)\cdot(-\lambda)\cdot(1-\lambda)
-	=-\lambda(1-\lambda)^2.
-\]
-Следовательно,
-\[
-	\boxed{\ \lambda_1=1,\ \lambda_2=1,\ \lambda_3=0\ }.
-\]
-
-% ─────────────────────────────────────────────────────────────────────────────
-
-\subsubsection*{Задача 3.3.2}
-
-Условие:
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q1) at (0,0) {$1$};
-	\node[state] (Q2) at (2.5,0) {$2$};
-	\node[state] (Q3) at (5,0) {$3$};
-
-	% --- рёбра ---
-	\path[e, bend left=12] (Q1) edge node[lbl] {$1$} (Q2);
-
-	\path[e, bend left=12] (Q2) edge node[lbl] {$q$} (Q1);
-	\path[e, bend left=12] (Q2) edge node[lbl] {$p$} (Q3);
-
-	\path[e, bend left=12] (Q3) edge node[lbl] {$1$} (Q2);
-
-\end{tikzpicture}
-
-Найти: $P$, $P^n$, $\overline{r}$ (стационарное распределение), $\lambda_1=1$, $\lambda_2$, $\lambda_3$ (собственные числа).
-
-\paragraph{Решение.}
-
-\[
-	P =
-	\begin{array}{c|ccc}
-		    & Q_1 & Q_2 & Q_3 \\ \hline
-		Q_1 & 0   & 1   & 0   \\
-		Q_2 & q   & 0   & p   \\
-		Q_3 & 0   & 1   & 0
-	\end{array}
-\]
-
-\emph{Степени.} Прямым перемножением:
-\[
-	P^2=
-	\begin{pmatrix}
-		q & 0 & p \\
-		0 & 1 & 0 \\
-		q & 0 & p
-	\end{pmatrix},
-	\qquad
-	P^{2k}=P^2,\quad P^{2k+1}=P\ \ (k\ge0),\quad P^0=I.
-\]
-
-\emph{Стационарное распределение.} Пусть $\overline r=(r_1,r_2,r_3)$.
-По столбцам $P$ имеем
-\[
-	\begin{aligned}
-		r_1 & = q r_2,     \\
-		r_2 & = r_1 + r_3, \\
-		r_3 & = p r_2,
-	\end{aligned}
-	\qquad r_1+r_2+r_3=1.
-\]
-Подставляя $r_1=q r_2$, $r_3=p r_2$ во второе уравнение:
-\[
-	r_2=(q r_2)+(p r_2)=(p+q)r_2=r_2 \quad(\text{тождество}).
-\]
-Из нормировки:
-\[
-	r_1+r_2+r_3=(q r_2)+r_2+(p r_2)=(1+p+q)r_2=2r_2=1 \Rightarrow r_2=\tfrac12,
-\]
-следовательно
-\[
-	\overline r=\Bigl(\tfrac{q}{2},\ \tfrac12,\ \tfrac{p}{2}\Bigr).
-\]
-
-\emph{Собственные числа.} Находим
-\[
-	\det(P-\lambda I)=
-	\det\begin{pmatrix}
-		-\lambda & 1        & 0        \\
-		q        & -\lambda & p        \\
-		0        & 1        & -\lambda
-	\end{pmatrix}
-	=(-\lambda)\!\det\!\begin{pmatrix}-\lambda&p\\[2pt]1&-\lambda\end{pmatrix}
-	-1\cdot\det\!\begin{pmatrix}q&p\\[2pt]0&-\lambda\end{pmatrix}.
-\]
-Отсюда
-\[
-	\det(P-\lambda I)=(-\lambda)(\lambda^2-p) - ( -q\lambda )
-	=-\lambda^3 + (p+q)\lambda
-	=-\lambda(\lambda^2-1).
-\]
-Так как $p+q=1$, получаем
-\[
-	\boxed{\ \lambda_1=1,\ \lambda_2=0,\ \lambda_3=-1\ }.
-\]
-
-% ─────────────────────────────────────────────────────────────────────────────
-
-\subsubsection*{Задача 3.3.3}
-
-Условие:
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q1) at (0,0) {$1$};
-	\node[state] (Q2) at (2.5,0) {$2$};
-	\node[state] (Q3) at (5,0) {$3$};
-
-	% --- рёбра ---
-	\path[e, loop above]   (Q1) edge node[lbl] {$q$} (Q1);
-	\path[e, bend left=12] (Q1) edge node[lbl] {$p$} (Q2);
-
-	\path[e, bend left=12] (Q2) edge node[lbl] {$q$} (Q1);
-	\path[e, bend left=12] (Q2) edge node[lbl] {$p$} (Q3);
-
-	\path[e, loop above]   (Q3) edge node[lbl] {$p$} (Q3);
-	\path[e, bend left=12] (Q3) edge node[lbl] {$q$} (Q2);
-
-\end{tikzpicture}
-
-Найти: $P$, $P^n$, $\overline{r}$ (стационарное распределение), $\lambda_1=1$, $\lambda_2$, $\lambda_3$ (собственные числа).
-
-\paragraph{Решение.}
-
-\[
-	P =
-	\begin{array}{c|ccc}
-		    & Q_1 & Q_2 & Q_3 \\ \hline
-		Q_1 & q   & p   & 0   \\
-		Q_2 & q   & 0   & p   \\
-		Q_3 & 0   & q   & p
-	\end{array}
-\]
-
-\emph{Стационарное распределение.} Пусть $\overline r=(r_1,r_2,r_3)$.
-Из $rP=\overline r$ по столбцам получаем
-\[
-	\begin{aligned}
-		r_1 & = q(r_1+r_2),    \\
-		r_2 & = p r_1 + q r_3, \\
-		r_3 & = p(r_2+r_3),
-	\end{aligned}
-	\qquad r_1+r_2+r_3=1.
-\]
-Из первого и третьего:
-\[
-	(1-q)r_1=q r_2 \ \Rightarrow\ p r_1=q r_2 \ \Rightarrow\ r_2=\frac{p}{q}r_1,
-	\qquad
-	(1-p)r_3=p r_2 \ \Rightarrow\ q r_3=p r_2 \ \Rightarrow\ r_3=\frac{p}{q}r_2.
-\]
-Следовательно
-\[
-	r_1:r_2:r_3 = 1 : \frac{p}{q} : \frac{p^2}{q^2} = q^2 : pq : p^2.
-\]
-Нормируя на единицу, получаем
-\[
-	\overline r=\pi=
-	\frac{1}{\,q^2+pq+p^2\,}\,(q^2,\ pq,\ p^2).
-\]
-
-\emph{Собственные числа.} Находим характеристический многочлен:
-\[
-	\det(P-\lambda I)=
-	\det\begin{pmatrix}
-		q-\lambda & p        & 0         \\
-		q         & -\lambda & p         \\
-		0         & q        & p-\lambda
-	\end{pmatrix}
-	=(q-\lambda)\bigl(\lambda^2-\lambda p-pq\bigr)-pq(p-\lambda).
-\]
-Раскрывая и используя $p+q=1$:
-\[
-	\det(P-\lambda I)
-	= -\lambda^3+\lambda^2+pq\,\lambda-pq
-	= -(\lambda-1)(\lambda^2-pq).
-\]
-Итак,
-\[
-	\boxed{\ \lambda_1=1,\quad \lambda_2=\sqrt{pq},\quad \lambda_3=-\sqrt{pq}\ }.
-\]
-
-\[
-	P^2 =
-	\begin{pmatrix}
-		q   & pq  & p^2 \\
-		q^2 & 2pq & p^2 \\
-		q^2 & pq  & p
-	\end{pmatrix},
-	\qquad
-	P^3 =
-	\begin{pmatrix}
-		q^2(1+p) & pq(1+p) & p^2      \\
-		q^2(1+p) & pq      & p^2(1+q) \\
-		q^2      & pq(1+q) & p^2(1+q)
-	\end{pmatrix}.
-\]
-
-\[
-	P^4 =
-	\begin{pmatrix}
-		q^2(1+p)  & pq(1+pq)  & p^2(1+pq) \\
-		q^2(1+pq) & pq(1+2pq) & p^2(1+pq) \\
-		q^2(1+pq) & pq(1+pq)  & p^2(1+q)
-	\end{pmatrix}.
-\]
-% ─────────────────────────────────────────────────────────────────────────────
-\subsubsection*{Задача 4}
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-	% --- вершины ---
-	\node[state] (Q0) at (0,0)   {$0$};
-	\node[state] (Q1) at (2.5,0) {$1$};
-	\node[state] (Q2) at (5,0)   {$2$};
-	\node[state] (Q3) at (7.5,0) {$3$};
-	\node[state] (Q4) at (10,0)  {$4$};
-
-	% --- рёбра ---
-	\path[e, loop above]   (Q0) edge node[lbl] {$p_0$} (Q0);
-	\path[e, bend left=12] (Q0) edge node[lbl] {$p_1$} (Q1);
-	\path[e, bend left=56] (Q0) edge node[lbl] {$p_2$} (Q2);
-
-	\path[e, bend left=12] (Q1) edge node[lbl] {$p_0$} (Q0);
-	\path[e, loop above]   (Q1) edge node[lbl] {$p_1$} (Q1);
-	\path[e, bend left=12] (Q1) edge node[lbl] {$p_2$} (Q2);
-
-	\path[e, bend left=12] (Q2) edge node[lbl] {$p_0$} (Q1);
-	\path[e, loop above]   (Q2) edge node[lbl] {$p_1$} (Q2);
-	\path[e, bend left=12] (Q2) edge node[lbl] {$p_2$} (Q3);
-
-	\path[e, bend left=12] (Q3) edge node[lbl] {$p_0$} (Q2);
-	\path[e, loop above]   (Q3) edge node[lbl] {$p_1$} (Q3);
-	\path[e, bend left=12] (Q3) edge node[lbl] {$p_2$} (Q4);
-
-	\path[e, bend left=12] (Q4) edge node[lbl] {$p_0$} (Q3);
-	\path[e, loop above]   (Q4) edge node[lbl] {$1-p_0$} (Q4);
-\end{tikzpicture}
-
-Найти: $P$, $\overline{r}$ (стационарное распределение), $que$.
-
-\paragraph{Решение.}
-
-Матрица переходных вероятностей:
-\[
-	P =
-	\begin{array}{c|ccccc}
-		    & Q_0 & Q_1 & Q_2 & Q_3 & Q_4   \\
-		\hline
-		Q_0 & p_0 & p_1 & p_2 & 0   & 0     \\
-		Q_1 & p_0 & p_1 & p_2 & 0   & 0     \\
-		Q_2 & 0   & p_0 & p_1 & p_2 & 0     \\
-		Q_3 & 0   & 0   & p_0 & p_1 & p_2   \\
-		Q_4 & 0   & 0   & 0   & p_0 & 1-p_0
-	\end{array}
-\]
-
-Стационарное распределение $\overline r=(r_0,r_1,r_2,r_3,r_4)$:
-\[
-	\overline r P = \overline r,\qquad \sum_{i=0}^4 r_i = 1,\qquad r_i\ge 0.
-\]
-
-Линейная система из $\overline r P=\overline r$:
-\[
-	\begin{aligned}
-		r_0 & = p_0 r_0 + p_0 r_1,                     \\
-		r_1 & = p_1 r_0 + p_1 r_1 + p_0 r_2,           \\
-		r_2 & = p_2 r_0 + p_2 r_1 + p_1 r_2 + p_0 r_3, \\
-		r_3 & = p_2 r_2 + p_1 r_3 + p_0 r_4,           \\
-		r_4 & = p_2 r_3 + (1-p_0) r_4.
-	\end{aligned}
-\]
-
-Среднее число в системе:
-$g(Q_i)=v_i$ — физическое значение в состоянии $Q_i$. Тогда
-$$que=\sum_{i=0}^{4} v_i r_i$$
-
-\subsubsection*{Задача 4.1}
-
-При $p_0=\tfrac{1}{2},\; p_1=\tfrac{1}{4},\; p_2=\tfrac{1}{4}$:
-\[
-	\begin{aligned}
-		r_0 & = \tfrac{1}{2}r_0 + \tfrac{1}{2}r_1,                                     \\
-		r_1 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1 + \tfrac{1}{2}r_2,                   \\
-		r_2 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1 + \tfrac{1}{4}r_2 + \tfrac{1}{2}r_3, \\
-		r_3 & = \tfrac{1}{4}r_2 + \tfrac{1}{4}r_3 + \tfrac{1}{2}r_4,                   \\
-		r_4 & = \tfrac{1}{4}r_3 + \tfrac{1}{2}r_4,\qquad
-		r_0+r_1+r_2+r_3+r_4=1.
-	\end{aligned}
-\]
-
-\[
-	\begin{array}{rcl}
-		\begin{aligned}
-			2r_0 & = r_0 + r_1,              \\
-			4r_1 & = r_0 + r_1 + 2r_2,       \\
-			4r_2 & = r_0 + r_1 + r_2 + 2r_3, \\
-			4r_3 & = r_2 + r_3 + 2r_4,       \\
-			2r_4 & = r_3 + 2r_4,
-		\end{aligned}
-		 & \qquad \Rightarrow \qquad &
-		\begin{aligned}
-			r_0 - r_1                  & = 0, \\
-			-\,r_0 + 3r_1 - 2r_2       & = 0, \\
-			-\,r_0 - r_1 + 3r_2 - 2r_3 & = 0, \\
-			-\,r_2 + 3r_3 - 2r_4       & = 0, \\
-			r_0+r_1+r_2+r_3+r_4        & =1.
-		\end{aligned}
-	\end{array}
-\]
-
-\[
-	\left[
-		\begin{array}{rrrrr|r}
-			1  & -1 & 0  & 0  & 0  & 0 \\
-			-1 & 3  & -2 & 0  & 0  & 0 \\
-			-1 & -1 & 3  & -2 & 0  & 0 \\
-			0  & 0  & -1 & 3  & -2 & 0 \\
-			1  & 1  & 1  & 1  & 1  & 1
-		\end{array}
-		\right]
-	\overset{}{\longrightarrow}
-	\left[
-		\begin{array}{rrrrr|r}
-			1 & 0 & 0 & 0 & 0 & \tfrac{4}{15} \\
-			0 & 1 & 0 & 0 & 0 & \tfrac{4}{15} \\
-			0 & 0 & 1 & 0 & 0 & \tfrac{4}{15} \\
-			0 & 0 & 0 & 1 & 0 & \tfrac{2}{15} \\
-			0 & 0 & 0 & 0 & 1 & \tfrac{1}{15}
-		\end{array}
-		\right]
-\]
-
-\[
-	\overline r =
-	\left(\tfrac{4}{15},\;\tfrac{4}{15},\;\tfrac{4}{15},\;\tfrac{2}{15},\;\tfrac{1}{15}\right).
-\]
-
-\[
-	que = \sum_{i=0}^{4} v_i r_i= 0\cdot\tfrac{4}{15} + 1\cdot\tfrac{4}{15} + 2\cdot\tfrac{4}{15} + 3\cdot\tfrac{2}{15} + 4\cdot\tfrac{1}{15} = \frac{22}{15} \approx 1.4667.
-\]
-
-\[
-	\boxed{\ que=\frac{22}{15}\approx1.4667\ }.
-\]
-
-\subsubsection*{Задача 4.2}
-
-При вероятностях $p_0=\tfrac{1}{4},\; p_1=\tfrac{1}{2},\; p_2=\tfrac{1}{4}$
-
-\[
-	\begin{aligned}
-		r_0 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1,                                     \\
-		r_1 & = \tfrac{1}{2}r_0 + \tfrac{1}{2}r_1 + \tfrac{1}{4}r_2,                   \\
-		r_2 & = \tfrac{1}{4}r_0 + \tfrac{1}{2}r_1 + \tfrac{1}{4}r_2 + \tfrac{1}{4}r_3, \\
-		r_3 & = \tfrac{1}{4}r_2 + \tfrac{1}{2}r_3 + \tfrac{1}{4}r_4,                   \\
-		r_4 & = \tfrac{1}{4}r_3 + \tfrac{3}{4}r_4,\qquad
-		r_0+r_1+r_2+r_3+r_4=1.
-	\end{aligned}
-\]
-
-\[
-	\begin{array}{rcl}
-		\begin{aligned}
-			4r_0 & = r_0 + r_1,              \\
-			4r_1 & = 2r_0 + 2r_1 + r_2,      \\
-			4r_2 & = r_0 + 2r_1 + r_2 + r_3, \\
-			4r_3 & = r_2 + 2r_3 + r_4,       \\
-			4r_4 & = r_3 + 3r_4,
-		\end{aligned}
-		 & \qquad \Rightarrow \qquad &
-		\begin{aligned}
-			3r_0 - r_1                 & = 0, \\
-			-\,2r_0 + 2r_1 - r_2       & = 0, \\
-			-\,r_0 - 2r_1 + 3r_2 - r_3 & = 0, \\
-			-\,r_2 + 2r_3 - r_4        & = 0, \\
-			r_0+r_1+r_2+r_3+r_4        & = 1.
-		\end{aligned}
-	\end{array}
-\]
-
-\[
-	\left[
-		\begin{array}{rrrrr|r}
-			3  & -1 & 0  & 0  & 0  & 0 \\
-			-2 & 2  & -1 & 0  & 0  & 0 \\
-			-1 & -2 & 3  & -1 & 0  & 0 \\
-			0  & 0  & -1 & 2  & -1 & 0 \\
-			1  & 1  & 1  & 1  & 1  & 1
-		\end{array}
-		\right]
-	\longrightarrow
-	\left[
-		\begin{array}{rrrrr|r}
-			1 & 0 & 0 & 0 & 0 & \tfrac{1}{16} \\
-			0 & 1 & 0 & 0 & 0 & \tfrac{3}{16} \\
-			0 & 0 & 1 & 0 & 0 & \tfrac{1}{4}  \\
-			0 & 0 & 0 & 1 & 0 & \tfrac{1}{4}  \\
-			0 & 0 & 0 & 0 & 1 & \tfrac{1}{4}
-		\end{array}
-		\right]
-\]
-
-\[
-	\overline r=\left(\tfrac{1}{16},\,\tfrac{3}{16},\,\tfrac{1}{4},\,\tfrac{1}{4},\,\tfrac{1}{4}\right).
-\]
-
-\[
-	que=\sum_{i=0}^{4} v_i r_i
-	= 0\cdot\tfrac{1}{16}+1\cdot\tfrac{3}{16}+2\cdot\tfrac{1}{4}+3\cdot\tfrac{1}{4}+4\cdot\tfrac{1}{4}
-	= \frac{39}{16}=2.4375.
-\]
-
-\[
-	\boxed{\,que=\frac{39}{16}\approx 2.4375\, }.
-\]
-
-\subsubsection*{Задача 4.3}
-
-При вероятностях $p_0=\tfrac{1}{4},\; p_1=\tfrac{1}{4},\; p_2=\tfrac{1}{2}$
-
-\[
-	\begin{aligned}
-		r_0 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1,                                     \\
-		r_1 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1 + \tfrac{1}{4}r_2,                   \\
-		r_2 & = \tfrac{1}{2}r_0 + \tfrac{1}{2}r_1 + \tfrac{1}{4}r_2 + \tfrac{1}{4}r_3, \\
-		r_3 & = \tfrac{1}{2}r_2 + \tfrac{1}{4}r_3 + \tfrac{1}{4}r_4,                   \\
-		r_4 & = \tfrac{1}{2}r_3 + \tfrac{3}{4}r_4,\qquad
-		r_0+r_1+r_2+r_3+r_4=1.
-	\end{aligned}
-\]
-
-\[
-	\begin{array}{rcl}
-		\begin{aligned}
-			4r_0 & = r_0 + r_1,               \\
-			4r_1 & = r_0 + r_1 + r_2,         \\
-			4r_2 & = 2r_0 + 2r_1 + r_2 + r_3, \\
-			4r_3 & = 2r_2 + r_3 + r_4,        \\
-			4r_4 & = 2r_3 + 3r_4,
-		\end{aligned}
-		 & \Rightarrow &
-		\begin{aligned}
-			3r_0 - r_1                  & = 0, \\
-			-\,r_0 + 3r_1 - r_2         & = 0, \\
-			-\,2r_0 - 2r_1 + 3r_2 - r_3 & = 0, \\
-			-\,2r_2 + 3r_3 - r_4        & = 0, \\
-			-\,2r_3 + r_4               & = 0, \\
-			r_0+r_1+r_2+r_3+r_4         & = 1.
-		\end{aligned}
-	\end{array}
-\]
-
-\[
-	\left[
-		\begin{array}{rrrrr|r}
-			3  & -1 & 0  & 0  & 0  & 0 \\
-			-1 & 3  & -1 & 0  & 0  & 0 \\
-			-2 & -2 & 3  & -1 & 0  & 0 \\
-			0  & 0  & -2 & 3  & -1 & 0 \\
-			0  & 0  & 0  & -2 & 1  & 0 \\
-			1  & 1  & 1  & 1  & 1  & 1
-		\end{array}
-		\right]
-	\longrightarrow
-	\left[
-		\begin{array}{rrrrr|r}
-			1 & 0 & 0 & 0 & 0 & \tfrac{1}{60} \\
-			0 & 1 & 0 & 0 & 0 & \tfrac{1}{20} \\
-			0 & 0 & 1 & 0 & 0 & \tfrac{2}{15} \\
-			0 & 0 & 0 & 1 & 0 & \tfrac{4}{15} \\
-			0 & 0 & 0 & 0 & 1 & \tfrac{8}{15}
-		\end{array}
-		\right]
-\]
-
-\[
-	\overline r=\left(\tfrac{1}{60},\,\tfrac{1}{20},\,\tfrac{2}{15},\,\tfrac{4}{15},\,\tfrac{8}{15}\right).
-\]
-
-\[
-	que=\sum_{i=0}^{4} v_i r_i
-	= 0\cdot\tfrac{1}{60}+1\cdot\tfrac{1}{20}+2\cdot\tfrac{2}{15}
-	+3\cdot\tfrac{4}{15}+4\cdot\tfrac{8}{15}
-	= \frac{13}{4}=3.25.
-\]
-\[
-	\boxed{\,que=\frac{13}{4}=3.25\, }.
-\]
-
-
-\subsection{Семинар 5}
-
-\subsubsection*{Задача 5}
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q0) at (0,0) {$0$};
-	\node[state] (Q1) at (2.5,0) {$1$};
-	\node[state] (Q2) at (5,0) {$2$};
-	\node[state] (Q3) at (7.5,0) {$3$};
-	\node[state] (Q4) at (10,0) {$4$};
-	\node[state] (Q5) at (12.5,0) {$\ldots$};
-
-	% --- рёбра ---
-	\path[e, loop above]   (Q0) edge node[lbl] {$p_0$} (Q0);
-	\path[e, bend left=12] (Q0) edge node[lbl] {$p_1$} (Q1);
-	\path[e, bend left=56] (Q0) edge node[lbl] {$p_2$} (Q2);
-
-	\path[e, bend left=12] (Q1) edge node[lbl] {$p_0$} (Q0);
-	\path[e, loop above]   (Q1) edge node[lbl] {$p_1$} (Q1);
-	\path[e, bend left=12] (Q1) edge node[lbl] {$p_2$} (Q2);
-
-	\path[e, bend left=12] (Q2) edge node[lbl] {$p_0$} (Q1);
-	\path[e, loop above]   (Q2) edge node[lbl] {$p_1$} (Q2);
-	\path[e, bend left=12] (Q2) edge node[lbl] {$p_2$} (Q3);
-
-	\path[e, bend left=12] (Q3) edge node[lbl] {$p_0$} (Q2);
-	\path[e, loop above]   (Q3) edge node[lbl] {$p_1$} (Q3);
-	\path[e, bend left=12] (Q3) edge node[lbl] {$p_2$} (Q4);
-
-	\path[e, bend left=12] (Q4) edge node[lbl] {$p_0$} (Q3);
-	\path[e, loop above]   (Q4) edge node[lbl] {$p_1$} (Q4);
-	\path[e, bend left=12] (Q4) edge node[lbl] {$p_2$} (Q5);
-
-\end{tikzpicture}
-
-Найти: $P$, $\overline{r}$ (стационарное распределение), $\mathrm{que} := \mathbb E[K]$.
-
-\paragraph{Решение.}
-
-\[
-	P =
-	\begin{array}{c|cccccc}
-		       & Q_0    & Q_1    & Q_2    & Q_3    & Q_4    & \ldots \\ \hline
-		Q_0    & p_0    & p_1    & p_2    & 0      & 0      & \ldots \\
-		Q_1    & p_0    & p_1    & p_2    & 0      & 0      & \ldots \\
-		Q_2    & 0      & p_0    & p_1    & p_2    & 0      & \ldots \\
-		Q_3    & 0      & 0      & p_0    & p_1    & p_2    & \ldots \\
-		Q_4    & 0      & 0      & 0      & p_0    & p_1    & \ldots \\
-		\vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \ddots
-	\end{array}
-\]
-
-Стационарное распределение $\overline r=(r_0,r_1,r_2,r_3,\ldots)$ задаётся условиями
-\[
-	\overline r P = \overline r,\quad \sum_{i=0}^\infty r_i = 1,\quad r_i\ge0.
-\]
-Из матрицы $P$ получаем систему:
-\[
-	\begin{array}{rcl}
-		\begin{aligned}
-			r_0 & = p_0 r_0 + p_0 r_1,                                 \\
-			r_1 & = p_1 r_0 + p_1 r_1 + p_0 r_2,                       \\
-			r_2 & = p_2 r_0 + p_2 r_1 + p_1 r_2 + p_0 r_3,             \\
-			r_k & = p_2 r_{k-1} + p_1 r_k + p_0 r_{k+1}, \quad k\ge 2.
-		\end{aligned}
-	\end{array}
-\]
-
-\subsubsection*{Задача 5.1}
-
-Пусть $p_0=\tfrac{1}{2},\ p_1=\tfrac{1}{4},\ p_2=\tfrac{1}{4}$. Тогда
-\[
-	\begin{array}{rcl}
-		\begin{aligned}
-			r_0 & = \tfrac{1}{2} r_0 + \tfrac{1}{2} r_1,                                           \\
-			r_1 & = \tfrac{1}{4} r_0 + \tfrac{1}{4} r_1 + \tfrac{1}{2} r_2,                        \\
-			r_2 & = \tfrac{1}{4} r_0 + \tfrac{1}{4} r_1 + \tfrac{1}{4} r_2 + \tfrac{1}{2} r_3,     \\
-			r_k & = \tfrac{1}{4} r_{k-1} + \tfrac{1}{4} r_k + \tfrac{1}{2} r_{k+1}, \quad k \ge 2.
-		\end{aligned}
-		 & \qquad \Rightarrow \qquad &
-		\begin{aligned}
-			r_1 & = r_0,                         \\
-			r_2 & = r_0,                         \\
-			r_k & = r_0\,2^{\,2-k},\quad k\ge 2.
-		\end{aligned}
-	\end{array}
-\]
-
-\[
-	\sum_{i=0}^\infty r_i = r_0+r_1+r_2+\sum_{k=3}^\infty r_0\,2^{\,2-k}
-	=3r_0+r_0\!\sum_{m=1}^\infty 2^{-m}=4r_0=1
-	\ \Rightarrow\ r_0=\tfrac14.
-\]
-
-
-\[
-	\overline r = \left(\tfrac{1}{4},\ \tfrac{1}{4},\ \tfrac{1}{4},\ \tfrac{1}{8},\ \tfrac{1}{16},\ \tfrac{1}{32},\ \ldots\right).
-\]
-
-\[
-	\mathrm{que}=\mathbb E[K]=\sum_{k=0}^\infty k\,r_k
-	=\tfrac14+\tfrac12+\sum_{k=3}^\infty k\,2^{-k}
-	=\tfrac34+\Bigl(\sum_{k=1}^\infty k\,2^{-k}-\tfrac12-\tfrac12\Bigr)
-	=\tfrac34+1=\tfrac{7}{4}.
-\]
-
-\subsubsection*{Задача 5.2}
-
-При вероятностях $p_0=\tfrac{1}{4},\quad p_1=\tfrac{1}{2},\quad p_2=\tfrac{1}{4}$
-\[
-	\begin{array}{rcl}
-		\begin{aligned}
-			r_0 & = \tfrac{1}{4} r_0 + \tfrac{1}{4} r_1,                                           \\
-			r_1 & = \tfrac{1}{2} r_0 + \tfrac{1}{2} r_1 + \tfrac{1}{4} r_2,                        \\
-			r_2 & = \tfrac{1}{4} r_0 + \tfrac{1}{2} r_1 + \tfrac{1}{4} r_2 + \tfrac{1}{4} r_3,     \\
-			r_k & = \tfrac{1}{4} r_{k-1} + \tfrac{1}{2} r_k + \tfrac{1}{4} r_{k+1}, \quad k \ge 2,
-		\end{aligned}
-		 & \qquad \Rightarrow \qquad &
-		\begin{aligned}
-			r_1 & = 3r_0,                    \\
-			r_2 & = 4r_0,                    \\
-			r_k & = r_0\,(k+2),\quad k\ge 0.
-		\end{aligned}
-	\end{array}
-\]
-Серия \(\sum_{k\ge0} r_k\) расходится, нормированного решения нет; стационарное распределение не существует.
-
-
-\subsection{Семинар 6}
-
-\subsubsection*{Задача 6.1}
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q0) at (0,0) {$1$};
-	\node[state] (Q1) at (2.5,0) {$2$};
-	\node[state] (Q2) at (5,0) {$3$};
-
-	% --- рёбра ---
-	\path[e, bend left=12] (Q1) edge node[lbl] {$1$} (Q0);
-	\path[e, bend left=12]   (Q1) edge node[lbl] {$1$} (Q2);
-
-\end{tikzpicture}
-
-\[
-	\Lambda =
-	\begin{pmatrix}
-		0 & 0  & 0 \\
-		1 & -2 & 1 \\
-		0 & 0  & 0
-	\end{pmatrix}
-\]
-
-\[
-	\vec{p}(0) = (0,1,0).
-\]
-
-\[
-	\vec{p}'(t) = \vec{p}(t)\Lambda,\quad \vec{p}(t)=(p_1(t),p_2(t),p_3(t)).
-\]
-
-\[
-	\begin{aligned}
-		p_1'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot 1 + p_3(t)\cdot 0 = p_2(t),     \\
-		p_2'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot(-2) + p_3(t)\cdot 0 = -2p_2(t), \\
-		p_3'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot 1 + p_3(t)\cdot 0 = p_2(t).
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		p_2(t) & = p_2(0)e^{-2t} = e^{-2t},                                       \\
-		p_1(t) & = \int p_2(t)\,dt = \int e^{-2t}\,dt = -\tfrac{1}{2}e^{-2t}+C_1, \\
-		p_3(t) & = \int p_2(t)\,dt = \int e^{-2t}\,dt = -\tfrac{1}{2}e^{-2t}+C_2.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		p_1(0) & = -\tfrac{1}{2}+C_1=0 \ \Rightarrow\ C_1=\tfrac{1}{2}, \\
-		p_3(0) & = -\tfrac{1}{2}+C_2=0 \ \Rightarrow\ C_2=\tfrac{1}{2}.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		p_1(t) & = \tfrac{1}{2}-\tfrac{1}{2}e^{-2t}, \\
-		p_2(t) & = e^{-2t},                          \\
-		p_3(t) & = \tfrac{1}{2}-\tfrac{1}{2}e^{-2t}.
-	\end{aligned}
-\]
-
-\[
-	\vec{p}(t)\xrightarrow[t\to\infty]{}\vec{p}(\infty)=\left(\tfrac{1}{2},\,0,\,\tfrac{1}{2}\right).
-\]
-
-\subsubsection*{Задача 6.2}
-
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q0) at (0,0) {$1$};
-	\node[state] (Q1) at (2.5,0) {$2$};
-	\node[state] (Q2) at (5,0) {$3$};
-
-	% --- рёбра ---
-	\path[e, bend left=12] (Q1) edge node[lbl] {$1$} (Q0);
-	\path[e, bend left=12]   (Q1) edge node[lbl] {$1$} (Q2);
-
-\end{tikzpicture}
-
-\[
-	\Lambda =
-	\begin{pmatrix}
-		0 & 0  & 0 \\
-		1 & -2 & 1 \\
-		0 & 0  & 0
-	\end{pmatrix}
-\]
-
-
-\[
-	\vec{p}(0) = (\beta_1,\beta_2,\beta_3).
-\]
-
-\[
-	\vec{p}'(t) = \vec{p}(t)\Lambda,\quad \vec{p}(t)=(p_1(t),p_2(t),p_3(t)).
-\]
-
-\[
-	\begin{aligned}
-		p_1'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot 1 + p_3(t)\cdot 0 = p_2(t),     \\
-		p_2'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot(-2) + p_3(t)\cdot 0 = -2p_2(t), \\
-		p_3'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot 1 + p_3(t)\cdot 0 = p_2(t).
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		p_2(t) & = p_2(0)e^{-2t} = \beta_2 e^{-2t},                                             \\
-		p_1(t) & = \int p_2(t)\,dt = \int \beta_2 e^{-2t}\,dt = -\tfrac{\beta_2}{2}e^{-2t}+C_1, \\
-		p_3(t) & = \int p_2(t)\,dt = \int \beta_2 e^{-2t}\,dt = -\tfrac{\beta_2}{2}e^{-2t}+C_2.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		p_1(0) & = -\tfrac{\beta_2}{2}+C_1=\beta_1 \ \Rightarrow\ C_1=\beta_1+\tfrac{\beta_2}{2}, \\
-		p_3(0) & = -\tfrac{\beta_2}{2}+C_2=\beta_3 \ \Rightarrow\ C_2=\beta_3+\tfrac{\beta_2}{2}.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		p_1(t) & = \beta_1+\tfrac{\beta_2}{2}-\tfrac{\beta_2}{2}e^{-2t}, \\
-		p_2(t) & = \beta_2 e^{-2t},                                      \\
-		p_3(t) & = \beta_3+\tfrac{\beta_2}{2}-\tfrac{\beta_2}{2}e^{-2t}.
-	\end{aligned}
-\]
-
-\[
-	\vec{p}(t)\xrightarrow[t\to\infty]{}\vec{p}(\infty)=\left(\beta_1+\tfrac{\beta_2}{2},\,0,\,\beta_3+\tfrac{\beta_2}{2}\right).
-\]
-
-\subsection{Семинар 7}
-
-\subsubsection*{Задача 7.1}
-
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q0) at (0,0) {$1$};
-	\node[state] (Q1) at (2.5,0) {$2$};
-	\node[state] (Q2) at (5,0) {$3$};
-
-	% --- рёбра ---
-	\path[e, bend left=12] (Q1) edge node[lbl] {$2$} (Q0);
-	\path[e, bend left=12]   (Q1) edge node[lbl] {$1$} (Q2);
-
-	\path[e, bend left=12]   (Q2) edge node[lbl] {$2$} (Q1);
-
-\end{tikzpicture}
-
-
-\[
-	\Lambda =
-	\begin{pmatrix}
-		0 & 0  & 0  \\
-		2 & -3 & 1  \\
-		0 & 2  & -2
-	\end{pmatrix}
-\]
-
-\[
-	\vec{p}(0) = (0,0,1).
-\]
-
-\[
-	\vec{p}'(t) = \vec{p}(t)\Lambda,\quad \vec{p}(t)=(p_1(t),p_2(t),p_3(t)).
-\]
-
-\[
-	\begin{aligned}
-		p_1'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot 2 + p_3(t)\cdot 0 = 2p_2(t),            \\
-		p_2'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot(-3) + p_3(t)\cdot 2 = -3p_2(t)+2p_3(t), \\
-		p_3'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot 1 + p_3(t)\cdot(-2) = p_2(t)-2p_3(t).
-	\end{aligned}
-\]
-
-Преобразование Лапласа:
-
-\[
-	\mathcal{L}\{\vec p'(t)\}(s)=s \vec \pi(s)-\vec p(0)
-	,\quad
-	\mathcal{L}\{\vec p(t)\}(s)=\vec \pi(s)
-	,\quad
-	s \vec \pi(s)-\vec p(0)=\vec \pi(s)\Lambda.
-\]
-
-\[
-	\pi_1+\pi_2+\pi_3=\frac{1}{s}
-\]
-
-\[
-	\begin{aligned}
-		s \pi_1(s)-0 & = \pi_1(s)\cdot(0) + \pi_2(s)\cdot 2 + \pi_3(s)\cdot 0 = 2\pi_2(s),             \\
-		s \pi_2(s)-0 & = \pi_1(s)\cdot 0 + \pi_2(s)\cdot(-3) + \pi_3(s)\cdot 2 = -3\pi_2(s)+2\pi_3(s), \\
-		s \pi_3(s)-1 & = \pi_1(s)\cdot 0 + \pi_2(s)\cdot 1 + \pi_3(s)\cdot(-2) = \pi_2(s)-2\pi_3(s).
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		(s)\pi_1(s)-2\pi_2(s)    & = 0, \\
-		-2\pi_3(s)+(s+3)\pi_2(s) & = 0, \\
-		-\pi_2(s)+(s+2)\pi_3(s)  & = 1.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		\pi_1(s) & = \frac{2}{s}\pi_2(s),   \\
-		\pi_3(s) & = \frac{s+3}{2}\pi_2(s).
-	\end{aligned}
-\]
-
-\[
-	\pi_2(s)\left(\frac{2}{s}+1+\frac{s+3}{2}\right) = \frac{1}{s}.
-\]
-
-\[
-	\pi_2(s)\left(\frac{4+2s+s(s+3)}{2s}\right) = \frac{1}{s}.
-\]
-
-\[
-	\pi_2(s) = \frac{2}{4+2s+s(s+3)}
-	= \frac{2}{s^2+5s+4}
-	=\frac{2}{(s+1)(s+4)}.
-\]
-
-\[
-	\pi_1(s) = \frac{2}{s} \pi_2(s) = \frac{4}{s(s+1)(s+4)},
-	\quad
-	\pi_3(s) = \frac{s+3}{2} \pi_2(s) = \frac{s+3}{(s+1)(s+4)}.
-\]
-
-\[
-	\begin{aligned}
-		\pi_1(s) & = \frac{4}{s(s+1)(s+4)}
-		= \frac{A}{s} + \frac{B}{s+1} + \frac{C}{s+4}                         \\
-		\pi_2(s) & = \frac{2}{(s+1)(s+4)} = \frac{D}{s+1} + \frac{E}{s+4}     \\
-		\pi_3(s) & =	 \frac{s+3}{(s+1)(s+4)} = \frac{F}{s+1} + \frac{G}{s+4}.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		A & = \lim_{s\rightarrow 0} s\pi_1(s)      = \frac{4}{(0+1)(0+4)} = 1,         \\
-		B & = \lim_{s\rightarrow -1} (s+1)\pi_1(s) = \frac{4}{(-1)(3)} = -\frac{4}{3}, \\
-		C & = \lim_{s\rightarrow -4} (s+4)\pi_1(s) = \frac{4}{(-4)(-3)} = \frac{1}{3}, \\
-		D & = \lim_{s\rightarrow -1} (s+1)\pi_2(s) = \frac{2}{(-1+4)} = \frac{2}{3},   \\
-		E & = \lim_{s\rightarrow -4} (s+4)\pi_2(s) = \frac{2}{(-4+1)} = -\frac{2}{3},  \\
-		F & = \lim_{s\rightarrow -1} (s+1)\pi_3(s) = \frac{-1+3}{-1+4} = \frac{2}{3},  \\
-		G & = \lim_{s\rightarrow -4} (s+4)\pi_3(s) = \frac{-4+3}{-4+1} = \frac{1}{3}.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		\pi_1(s) & = \frac{1}{s} - \frac{4}{3(s+1)} + \frac{1}{3(s+4)}, \\
-		\pi_2(s) & = \frac{2}{3(s+1)} - \frac{2}{3(s+4)},               \\
-		\pi_3(s) & = \frac{2}{3(s+1)} + \frac{1}{3(s+4)}.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		p_1(t) & = \mathcal{L}^{-1}\{\pi_1(s)\}(t) = 1 - \tfrac{4}{3}e^{-t} + \tfrac{1}{3}e^{-4t}, \\
-		p_2(t) & = \mathcal{L}^{-1}\{\pi_2(s)\}(t) = \tfrac{2}{3}e^{-t} - \tfrac{2}{3}e^{-4t},     \\
-		p_3(t) & = \mathcal{L}^{-1}\{\pi_3(s)\}(t) = \tfrac{2}{3}e^{-t} + \tfrac{1}{3}e^{-4t}.
-	\end{aligned}
-\]
-
-\[
-	\vec{p}(t)\xrightarrow[t\to\infty]{}\vec{p}(\infty)=\left(1,\,0,\,0\right).
-\]
-
-\subsubsection*{Задача 7.2}
-
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q0) at (0,0) {$1$};
-	\node[state] (Q1) at (2.5,0) {$2$};
-	\node[state] (Q2) at (5,0) {$3$};
-
-	% --- рёбра ---
-	\path[e, bend left=12] (Q0) edge node[lbl] {$9$} (Q1);
-
-	\path[e, bend left=12] (Q1) edge node[lbl] {$2$} (Q2);
-
-	\path[e, bend left=24] (Q2) edge node[lbl] {$2$} (Q0);
-
-\end{tikzpicture}
-
-
-\[
-	\Lambda =
-	\begin{pmatrix}
-		-9 & 9  & 0  \\
-		0  & -2 & 2  \\
-		2  & 0  & -2
-	\end{pmatrix}
-\]
-
-\[
-	\vec{p}(0) = (1,0,0).
-\]
-
-\[
-	\vec{p}'(t) = \vec{p}(t)\Lambda,\quad \vec{p}(t)=(p_1(t),p_2(t),p_3(t)).
-\]
-
-\[
-	\begin{aligned}
-		p_1'(t) & =  p_1 (t)\cdot(-9) + p_2(t)\cdot 0 + p_3(t)\cdot 2 = -9p_1(t)+2p_3(t), \\
-		p_2'(t) & =  p_1 (t)\cdot 9 + p_2(t)\cdot(-2) + p_3(t)\cdot 0 = 9p_1(t)-2p_2(t),  \\
-		p_3'(t) & =  p_1 (t)\cdot 0 + p_2(t)\cdot 2 + p_3(t)\cdot(-2) = 2p_2(t)-2p_3(t).
-	\end{aligned}
-\]
-
-Преобразование Лапласа:
-
-\[
-	\mathcal{L}\{\vec p'(t)\}(s)=s \vec \pi(s)-\vec p(0)
-	,\quad
-	\mathcal{L}\{\vec p(t)\}(s)=\vec \pi(s)
-	,\quad
-	s \vec \pi(s)-\vec p(0)=\vec \pi(s)\Lambda.
-\]
-
-\[
-	\pi_1+\pi_2+\pi_3=\frac{1}{s}
-\]
-
-\[
-	\begin{aligned}
-		s \pi_1(s)-1 & = \pi_1(s)\cdot(-9) + \pi_2(s)\cdot 0 + \pi_3(s)\cdot 2 = -9\pi_1(s)+2\pi_3(s), \\
-		s \pi_2(s)-0 & = \pi_1(s)\cdot 9 + \pi_2(s)\cdot(-2) + \pi_3(s)\cdot 0 = 9\pi_1(s)-2\pi_2(s),  \\
-		s \pi_3(s)-0 & = \pi_1(s)\cdot 0 + \pi_2(s)\cdot 2 + \pi_3(s)\cdot(-2) = 2\pi_2(s)-2\pi_3(s).
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		(s+9)\pi_1(s)-2\pi_3(s)  & = 1, \\
-		-9\pi_1(s)+(s+2)\pi_2(s) & = 0, \\
-		-2\pi_2(s)+(s+2)\pi_3(s) & = 0.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		\pi_2(s) & = \frac{9}{s+2}\pi_1(s),                              \\
-		\pi_3(s) & = \frac{2}{s+2}\pi_2(s) = \frac{18}{(s+2)^2}\pi_1(s).
-	\end{aligned}
-\]
-
-\[
-	\pi_1(1+ \frac{9}{s+2} + \frac{18}{(s+2)^2}) = \frac{1}{s}.
-\]
-
-\[
-	\pi_1\left(\frac{(s+2)^2+9s(s+2)^2+ 18s}{(s+2)^2}\right) = \frac{1}{s}.
-\]
-
-\[
-	\pi_1(s) = \frac{(s+2)^2}{s((s+2)^2+9(s+2)^2+ 18)}
-	= \frac{(s+2)^2}{s(s^2+13s+40)}
-	= \frac{(s+2)^2}{s(s+5)(s+8)}.
-\]
-
-\[
-	\pi_2(s) = \frac{9}{s+2}\pi_1(s) = \frac{9(s+2)}{s(s+5)(s+8)},
-	\quad
-	\pi_3(s) = \frac{18}{(s+2)^2}\pi_1(s) = \frac{18}{s(s+5)(s+8)}.
-\]
-
-\[
-	\begin{aligned}
-		\pi_1(s) & = \frac{(s+2)^2}{s(s+5)(s+8)} = \frac{A}{s} + \frac{B}{s+5} + \frac{C}{s+8}, \\
-		\pi_2(s) & = \frac{9(s+2)}{s(s+5)(s+8)} = \frac{D}{s} + \frac{E}{s+5} + \frac{F}{s+8},  \\
-		\pi_3(s) & = \frac{18}{s(s+5)(s+8)} = \frac{G}{s} + \frac{H}{s+5} + \frac{I}{s+8}.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		A & = \lim_{s\rightarrow 0} s\pi_1(s)      & = \frac{(0+2)^2}{(0+5)(0+8)} = \frac{4}{40} = \frac{1}{10}, \\
-		B & = \lim_{s\rightarrow -5} (s+5)\pi_1(s) & = \frac{(-5+2)^2}{-5(-5+8)} = \frac{9}{-15} = -\frac{3}{5}, \\
-		C & = \lim_{s\rightarrow -8} (s+8)\pi_1(s) & = \frac{(-8+2)^2}{-8(-8+5)} = \frac{36}{24} = \frac{3}{2},  \\
-		D & = \lim_{s\rightarrow 0} s\pi_2(s)      & = \frac{9(0+2)}{(0+5)(0+8)} = \frac{18}{40} = \frac{9}{20}, \\
-		E & = \lim_{s\rightarrow -5} (s+5)\pi_2(s) & = \frac{9(-5+2)}{-5(-5+8)} = \frac{-27}{-15} = \frac{9}{5}, \\
-		F & = \lim_{s\rightarrow -8} (s+8)\pi_2(s) & = \frac{9(-8+2)}{-8(-8+5)} = \frac{-54}{24} = -\frac{9}{4}, \\
-		G & = \lim_{s\rightarrow 0} s\pi_3(s)      & = \frac{18}{(0+5)(0+8)} = \frac{18}{40} = \frac{9}{20},     \\
-		H & = \lim_{s\rightarrow -5} (s+5)\pi_3(s) & = \frac{18}{-5(-5+8)} = \frac{18}{-15} = -\frac{6}{5},      \\
-		I & = \lim_{s\rightarrow -8} (s+8)\pi_3(s) & = \frac{18}{-8(-8+5)} = \frac{18}{24} = \frac{3}{4}.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		\pi_1(s) & = \frac{1}{10s} - \frac{3}{5(s+5)} + \frac{3}{2(s+8)}, \\
-		\pi_2(s) & = \frac{9}{20s} + \frac{9}{5(s+5)} - \frac{9}{4(s+8)}, \\
-		\pi_3(s) & = \frac{9}{20s} - \frac{6}{5(s+5)} + \frac{3}{4(s+8)}.
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		p_1(t) & = \mathcal{L}^{-1}\{\pi_1(s)\}(t)
-		= \frac{1}{10} - \frac{3}{5}e^{-5t} + \frac{3}{2}e^{-8t}, \\
-		p_2(t) & = \mathcal{L}^{-1}\{\pi_2(s)\}(t)
-		= \frac{9}{20} + \frac{9}{5}e^{-5t} - \frac{9}{4}e^{-8t}, \\
-		p_3(t) & = \mathcal{L}^{-1}\{\pi_3(s)\}(t)
-		= \frac{9}{20} - \frac{6}{5}e^{-5t} + \frac{3}{4}e^{-8t}.
-	\end{aligned}
-\]
-
-\[
-	\vec{p}(t)\xrightarrow [t\to\infty]{}\vec{p}(\infty)=\left(\tfrac{1}{10},\,\tfrac{9}{20},\,\tfrac{9}{20}\right).
-\]
-
-Стационарное распределение $\overline r=(r_1,r_2,r_3,\ldots)$
-
-\[
-	\begin{cases}
-		r_1 = -9 r_1 + 2 r_3 \\
-		r_2 = 9 r_1 -2 r_2   \\
-		r_3 = 2 r_2 -2 r_2   \\
-		r_1 + r_2 + r_3 = 1.
-	\end{cases}
-	, \quad
-	\begin{cases}
-		-9r_1 + 2r_3 = 0, \\
-		9r_1 - 2r_2 = 0,  \\
-		2r_2 - 2r_3 = 0,  \\
-		r_1 + r_2 + r_3 = 1.
-	\end{cases}
-\]
-
-\[
-	r_2=r_3=\frac{9}{2}r_1
-	, \quad
-	r_1(1+\frac{9}{2}+\frac{9}{2})=1
-	, \quad
-	r_1=\frac{1}{10}
-\]
-
-\[
-	\vec r = (\frac{1}{10}, \frac{9}{20}, \frac{9}{20})
-\]
+\input{seminars/sem1}
+\newpage
+\input{seminars/sem2}
+\newpage
+\input{seminars/sem3}
+\newpage
+\input{seminars/sem4}
+\newpage
+\input{seminars/sem5}
+\newpage
+\input{seminars/sem6}
+\newpage
+\input{seminars/sem7}
